updated docs and meta resources

--- a/dist.ini
+++ b/dist.ini
@@ -7,4 +7,5 @@ copyright_year   = 2012
 [@DAGOLDEN]
 :version = 0.032
 stopwords = MongoDB
-
+AutoMetaResources.bugtracker.rt = 0
+AutoMetaResources.bugtracker.github = user:dagolden
